name:           hodatime
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         jason

library
  hs-source-dirs:  src
  build-depends:   base >= 4
  ghc-options:     -Wall
  exposed-modules: 
                   Data.HodaTime,
                   Data.HodaTime.Calendar.Gregorian,
                   Data.HodaTime.Calendar.Iso,
                   Data.HodaTime.Duration,
                   Data.HodaTime.Instant,
                   Data.HodaTime.Offset
  other-modules:   
                   Data.HodaTime.CacheTable,
                   Data.HodaTime.Calendar,
                   Data.HodaTime.Constants,
                   Data.HodaTime.Internal,
                   Data.HodaTime.Types

