name:           hodatime
version:        0.1
cabal-version:  >=1.10
build-type:     Simple
author:         jason

library
  default-language:
                   Haskell2010
  hs-source-dirs:  src
  build-depends:   base >= 4
  ghc-options:     -Wall
  exposed-modules:
                   Data.HodaTime,
                   Data.HodaTime.Calendar.Gregorian,
                   Data.HodaTime.Calendar.Iso,
                   Data.HodaTime.Duration,
                   Data.HodaTime.Instant,
                   Data.HodaTime.Offset,
                   Data.HodaTime.LocalTime,
                   Data.HodaTime.LocalDateTime,
                   Data.HodaTime.OffsetDateTime,
                   Data.HodaTime.ZonedDateTime
  other-modules:
                   Data.HodaTime.Calendar,
                   Data.HodaTime.Constants,
                   Data.HodaTime.Internal,
                   Data.HodaTime.Duration.Internal,
                   Data.HodaTime.LocalTime.Internal,
                   Data.HodaTime.Calendar.Gregorian.Internal,
                   Data.HodaTime.Calendar.Gregorian.CacheTable,
                   Data.HodaTime.Instant.Internal,
                   Data.HodaTime.LocalDateTime.Internal,
                   Data.HodaTime.OffsetDateTime.Internal,
                   Data.HodaTime.ZonedDateTime.Internal,
                   Data.HodaTime.ZonedDateTime.Olson

